# tedge-test-example

./: .gitignore  LICENSE  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  setup_python.sh
Cumulocity/: Cumulocity.py  __init__.py
DeviceLibrary/: DeviceLibrary.py  __init__.py
ThinEdgeIO/: ThinEdgeIO.py  ThinEdgeIO.rst
images/: bootstrap.sh  debian-systemd.dockerfile  install-tedge.sh
images/files/: system.toml
integration/: conftest.py
integration/command/: test_apama.py  test_command.py  test_installation.py  test_restart.py
integration/fixtures/: c8y_realtime.py  device.py  device_mgmt.py  docker_device.py
integration/fixtures/device/: adapter.py  device.py
integration/fixtures/docker/: device.py  factory.py
integration/robot/: README.md  requirements.txt
integration/robot/libraries/ThinEdgeIO/: ThinEdgeIO.py  __init__.py
integration/robot/resources/: common.resource
integration/robot/tests/: ChildDevices.robot  Measurements.robot  Software.robot
integration/tests/: test_alarms.py  test_apama.py  test_child_devices.py  test_command.py  test_configuration.py  test_events.py  test_log_plugin.py  test_measurements.py  test_restart.py  test_software_installation.py
integration/tests/robot/: ChildDevices.robot  Demo.robot  Measurements.robot  README.md  Software.robot  debug.py
lib/DeviceLibrary/: DeviceLibrary.py  DeviceLibrary.rst
lib/ThinEdgeIO/: ThinEdgeIO.py
